# dredd-rs

./: .gitignore  Cargo.toml  README.md
src/: engine.rs  lib.rs  rule.rs  runner.rs
src/rule/: best_first_rule.rs  chain_rule.rs
src/runner/: best_first_rule_runner.rs  chain_rule_runner.rs
tests/: best_first_rule_test.rs  chain_rule_test.rs
