[package]
name = "dredd-rs"
authors = ["Leonardo Lamas <leoslamas@gmail.com>"]
description = "A simple rules engine for Rust, adapted from the Dredd implementation for Android."
version = "0.1.8"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/dredd-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leoslamas/dredd-rs"
categories = ["algorithms", "config", "data-structures"]
keywords = ["rules", "engine", "dredd", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]